unpackaged/main/default/objects/MSChat_Transcript__c/MSChat_Transcript__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage chat transcripts from Messaging Sessions within the organization.</description>
    <label>MS Chat Transcript</label>
    <nameField>
        <displayFormat>TRANS-{0000}</displayFormat>
        <label>Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Chat Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>