unpackaged/main/default/objects/MSChat_Transcript__c/fields/Conversation_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Identifier__c</fullName>
    <description>Unique identifier for the messaging conversation, used to link to the MessagingSession record and prevent duplicate transcript creation.</description>
    <externalId>true</externalId>
    <inlineHelpText>System-populated field containing the MessagingSession ID. Used to ensure only one transcript is created per conversation.</inlineHelpText>
    <label>Conversation Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>