unpackaged/main/default/objects/MSChat_Transcript__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Detailed error message and stack trace if transcript generation failed.</description>
    <inlineHelpText>Populated only when Status is Error. Contains technical details for troubleshooting.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>