unpackaged/main/default/objects/MSChat_Transcript__c/fields/First_Agent_Message__c.field-meta.xml
<CustomField>
    <fullName>First_Agent_Message__c</fullName>
    <description>The first message sent by an agent in this conversation.</description>
    <inlineHelpText>Captures the initial agent response text for reporting and analysis.</inlineHelpText>
    <label>First Agent Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>