unpackaged/main/default/objects/MSChat_Transcript__c/fields/First_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Agent_Name__c</fullName>
    <description>Display name of the first agent who responded in this conversation.</description>
    <inlineHelpText>The name of the agent who sent the first response to the customer.</inlineHelpText>
    <label>First Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>