unpackaged/main/default/objects/MSChat_Transcript__c/fields/First_Agent_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Agent_Response_Time__c</fullName>
    <description>Timestamp when the first agent message was sent in this conversation.</description>
    <inlineHelpText>Date and time of the first agent response, used for response time metrics.</inlineHelpText>
    <label>First Agent Response Time</label>
    <type>DateTime</type>
</CustomField>