unpackaged/main/default/objects/MSChat_Transcript__c/fields/Full_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Full_Transcript__c</fullName>
    <description>Complete HTML-formatted transcript of the chat conversation with timestamps, sender names, roles, and messages.</description>
    <inlineHelpText>Displays the full conversation history in a formatted table.</inlineHelpText>
    <label>Full Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>