unpackaged/main/default/objects/MSChat_Transcript__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the MessagingSession record for this chat transcript.</description>
    <inlineHelpText>Links this transcript to its source MessagingSession record.</inlineHelpText>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>MS Chat Transcripts</relationshipLabel>
    <relationshipName>MS_Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>