unpackaged/main/default/objects/MSChat_Transcript__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <description>Timestamp when the messaging session ended.</description>
    <inlineHelpText>Date and time when the chat session was completed or closed.</inlineHelpText>
    <label>Session End Time</label>
    <type>DateTime</type>
</CustomField>