unpackaged/main/default/objects/MSChat_Transcript__c/fields/Total_Messages__c.field-meta.xml
<CustomField>
    <fullName>Total_Messages__c</fullName>
    <description>Total count of messages in this conversation transcript.</description>
    <inlineHelpText>Number of messages exchanged in this chat session.</inlineHelpText>
    <label>Total Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>